--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,11 @@ loom {
 		}
 	}
 
+	runs {
+		client {
+			programArgs(["--username", "iamjason13", "--uuid", "fc770fcd-11c0-4c5c-818e-4e0f2e0fd8c0"])
+		}
+	}
 }
 
 dependencies {
